test/parser/type_declaration/var_in_record_variant_error.myte
module test

type Variants =
  | Enum
  | Record { var foo: Int }